--- a/.drone.yml
+++ b/.drone.yml
@@ -17,7 +17,7 @@ steps:
   - mkdir -p /etc/apt/keyrings
   - curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor --no-tty --yes -o /etc/apt/keyrings/nodesource.gpg
   - echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_20.x nodistro main" | tee /etc/apt/sources.list.d/nodesource.list
-  - apt-get install -y nodejs
+  - apt-get install -y nodejs npm
   - npm install -g cdk8s-cli
   - cdk8s import
   - git diff
