--- a/configs/dex-idp.yaml
+++ b/configs/dex-idp.yaml
@@ -91,10 +91,11 @@ ingress:
   enabled: true
 
   annotations:
-    kubernetes.io/ingress.class: "traefik"
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
     traefik.ingress.kubernetes.io/redirect-entry-point: "https"
     traefik.ingress.kubernetes.io/redirect-permanent: "true"
+  
+  className: traefik
 
   hosts:
     - host: dex.services.mkz.me
