--- a/configs/jaeger.yaml
+++ b/configs/jaeger.yaml
@@ -6,12 +6,12 @@ allInOne:
     enabled: true
     hosts:
     - jaeger.services.mkz.me
+    ingressClassName: traefik
     tls:
     - secretName: tls-jaeger-cert
       hosts:
       - jaeger.services.mkz.me
     annotations:
-      kubernetes.io/ingress.class: traefik
       cert-manager.io/cluster-issuer: letsencrypt-prod
       traefik.ingress.kubernetes.io/redirect-entry-point: https
       traefik.ingress.kubernetes.io/redirect-permanent: "true"
