--- a/configs/kubernetes-dashboard.yaml
+++ b/configs/kubernetes-dashboard.yaml
@@ -9,7 +9,6 @@ extraArgs:
 ingress:
   enabled: true
   annotations:
-    kubernetes.io/ingress.class: traefik
     cert-manager.io/cluster-issuer: letsencrypt-prod
     traefik.ingress.kubernetes.io/redirect-entry-point: https
     traefik.ingress.kubernetes.io/redirect-permanent: "true"
@@ -17,6 +16,8 @@ ingress:
 
   hosts:
     - kubernetes-dashboard.services.mkz.me
+
+  ingressClassName: traefik
 
   tls:
     - secretName: kubernetes-dashboard-tls
