--- a/configs/opensearch-dashboards.yaml
+++ b/configs/opensearch-dashboards.yaml
@@ -16,7 +16,6 @@ config:
 ingress:
   enabled: true
   annotations:
-    kubernetes.io/ingress.class: traefik
     cert-manager.io/cluster-issuer: letsencrypt-prod
     traefik.ingress.kubernetes.io/redirect-entry-point: https
     traefik.ingress.kubernetes.io/redirect-permanent: "true"
@@ -29,6 +28,7 @@ ingress:
         backend:
           serviceName: ""
           servicePort: ""
+  ingressClassName: traefik
   tls:
   - secretName: opensearch-dashboards-services-mkz-me-tls
     hosts:
