--- a/configs/vault.yaml
+++ b/configs/vault.yaml
@@ -55,7 +55,6 @@ server:
   ingress:
     enabled: true
     annotations:
-      kubernetes.io/ingress.class: traefik
       cert-manager.io/cluster-issuer: letsencrypt-prod
       traefik.ingress.kubernetes.io/redirect-entry-point: https
       traefik.ingress.kubernetes.io/redirect-permanent: "true"
@@ -63,6 +62,8 @@ server:
     hosts:
       - host: vault.services.mkz.me
         paths: []
+
+    ingressClassName: traefik
 
     tls:
       - secretName: vault-tls
