--- a/.drone.yml
+++ b/.drone.yml
@@ -10,22 +10,15 @@ trigger:
 
 steps:
 - name: build on main
-  image: golang
+  image: git.mkz.me/mycroft/golang-cdk8s:latest
   commands:
-  - apt-get update
-  - apt-get install -y ca-certificates curl gnupg
-  - mkdir -p /etc/apt/keyrings
-  - curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor --no-tty --yes -o /etc/apt/keyrings/nodesource.gpg
-  - echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_20.x nodistro main" | tee /etc/apt/sources.list.d/nodesource.list
-  - apt-get install -y nodejs npm
-  - npm install -g cdk8s-cli
   - cdk8s import
   - git diff
   - git checkout cdk8s.yaml
   - cdk8s synth
 
 - name: prepare generated
-  image: golang
+  image: git.mkz.me/mycroft/golang-cdk8s:latest
   commands:
   - git fetch origin +refs/heads/generated
   - git checkout generated
