Velero: use a prefix in location
It seems like velero is no longer happy with its own backups, as it is
flagging "backuplocation" as invalid directory.

--- a/configs/velero.yaml
+++ b/configs/velero.yaml
@@ -12,6 +12,7 @@ configuration:
     - provider: aws
       default: true
       bucket: k8s-backup
+      prefix: velero-backup
       config:
         region: minio
         s3Url: "http://nas0.lan.mkz.me:9000"
