wikijs: Fix db name, user

--- a/configs/wikijs.yaml
+++ b/configs/wikijs.yaml
@@ -23,5 +23,7 @@ ingress:
 postgresql:
   enabled: false
   postgresqlHost: postgres-instance.postgres
+  postgresqlUser: wikijs
+  postgresqlDatabase: wikijs
   existingSecret: postgresql
   existingSecretKey: password
