--- a/configs/wikijs.yaml
+++ b/configs/wikijs.yaml
@@ -22,7 +22,7 @@ ingress:
 
 postgresql:
   enabled: false
-  ssl: false
+  ssl: true
   postgresqlHost: postgres-instance.postgres
   postgresqlUser: wikijs
   postgresqlDatabase: wikijs
