wikijs: disable traefik auth, added new vhost
It seems like our multiple domain setup is not compatible with traefik
(the auth host domain doesn't match all urls).

--- a/configs/wikijs.yaml
+++ b/configs/wikijs.yaml
@@ -9,20 +9,19 @@ ingress:
     cert-manager.io/cluster-issuer: letsencrypt-prod
     traefik.ingress.kubernetes.io/redirect-entry-point: https
     traefik.ingress.kubernetes.io/redirect-permanent: "true"
-    traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth-traefik-forward-auth@kubernetescrd
   hosts:
     - host: wiki.services.mkz.me
       paths:
         - path: "/"
           pathType: Prefix
-    - host: wiki.mkz.cx
+    - host: wiki.iop.cx
       paths:
         - path: "/"
           pathType: Prefix
   tls:
     - hosts:
       - wiki.services.mkz.me
-      - wiki.mkz.cx
+      - wiki.iop.cx
       secretName: secret-tls-www
 
 postgresql:
