--- a/configs/wikijs.yaml
+++ b/configs/wikijs.yaml
@@ -9,6 +9,7 @@ ingress:
     cert-manager.io/cluster-issuer: letsencrypt-prod
     traefik.ingress.kubernetes.io/redirect-entry-point: https
     traefik.ingress.kubernetes.io/redirect-permanent: "true"
+    traefik.ingress.kubernetes.io/router.middlewares: traefik-vhost-redirect-wikijs
   hosts:
     - host: wiki.services.mkz.me
       paths:
