--- a/versions.yaml
+++ b/versions.yaml
@@ -29,6 +29,7 @@ helmcharts:
   vmware-tanzu/velero: 6.0.0
 images:
   corentinth/it-tools: 2023.12.21-5ed3693
+  danielszabo99/microbin: 2.0.4
   docker.l5d.io/buoyantio/emojivoto-emoji-svc: v12
   docker.l5d.io/buoyantio/emojivoto-web: v12
   docker.l5d.io/buoyantio/emojivoto-voting-svc: v12
