--- a/configs/loki.yaml
+++ b/configs/loki.yaml
@@ -3,6 +3,15 @@ loki:
   auth_enabled: false
   commonConfig:
     replication_factor: 1
+  schemaConfig:
+    configs:
+    - from: 2024-01-01
+      store: tsdb
+      index:
+        prefix: loki_index_
+        period: 24h
+      object_store: filesystem
+      schema: v13
   storage:
     type: filesystem
 
