--- a/cicd/kustomization.yaml
+++ b/cicd/kustomization.yaml
@@ -1,6 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+namespace: tekton-builds
+
 labels:
 - includeSelectors: true
   pairs:
@@ -9,3 +11,5 @@ labels:
 resources:
 - tasks/hello-world-task.yaml
 - tasks/hello-world-taskrun.yaml
+- tasks/goodbye-task.yaml
+- pipelines/hello-world-pipeline.yaml
