feat(cicd): adding missing pipelinerun

--- a/cicd/kustomization.yaml
+++ b/cicd/kustomization.yaml
@@ -13,3 +13,4 @@ resources:
 - tasks/hello-world-taskrun.yaml
 - tasks/goodbye-task.yaml
 - pipelines/hello-world-pipeline.yaml
+- pipelines/hello-world-pipelinerun.yaml
