fix(cicd): renaming service account

--- a/cicd/triggers/hello-listener.yaml
+++ b/cicd/triggers/hello-listener.yaml
@@ -3,7 +3,7 @@ kind: EventListener
 metadata:
   name: hello-listener
 spec:
-  serviceAccountName: tekton-robot
+  serviceAccountName: tekton-builds-robot
   triggers:
     - name: hello-trigger 
       bindings:
