--- a/versions.yaml
+++ b/versions.yaml
@@ -1,5 +1,6 @@
 helmcharts:
   aqua/trivy-operator: 0.18.4
+  authentik/authentik: 2024.4.2
   dex/dex: 0.17.1
   external-secrets/external-secrets: 0.9.18
   grafana/loki: 6.6.2
