--- a/configs/kube-prometheus-stack.yaml
+++ b/configs/kube-prometheus-stack.yaml
@@ -229,9 +229,9 @@ additionalPrometheusRulesMap:
 
 # https://github.com/fluxcd/flux2-monitoring-example/blob/main/monitoring/controllers/kube-prometheus-stack/kube-state-metrics-config.yaml
 kube-state-metrics:
-  collectors: [ ]
-  extraArgs:
-    - --custom-resource-state-only=true
+  # collectors: [ ]
+  # extraArgs:
+  #   - --custom-resource-state-only=true
   rbac:
     extraRules:
       - apiGroups:
