feat(authentik): configure mail relay

--- a/configs/authentik.yaml
+++ b/configs/authentik.yaml
@@ -1,6 +1,15 @@
 # https://github.com/goauthentik/helm/blob/main/charts/authentik/values.yaml
 authentik:
-  log_level: trace
+  log_level: info
+  email:
+    host: mail.mkz.me
+    port: 587
+    username: file:///mailrelay/username
+    password: file:///mailrelay/password
+    use_tls: true
+    use_ssl: false
+    timeout: 30
+    from: "Homelab's Authentik <authentik@mkz.me>"
   postgresql:
     host: postgres-instance.postgres
     user: file:///postgres-creds/username
@@ -30,12 +39,18 @@ server:
     - name: authentik-secret
       secret:
         secretName: authentik-secret
+    - name: mailrelay
+      secret:
+        secretName: mailrelay
   volumeMounts:
     - name: postgres-creds
       mountPath: /postgres-creds
       readOnly: true
     - name: authentik-secret
       mountPath: /authentik-secret
+      readOnly: true
+    - name: mailrelay
+      mounthPath: /mailrelay
       readOnly: true
 
 worker:
@@ -46,10 +61,16 @@ worker:
     - name: authentik-secret
       secret:
         secretName: authentik-secret
+    - name: mailrelay
+      secret:
+        secretName: mailrelay
   volumeMounts:
     - name: postgres-creds
       mountPath: /postgres-creds
       readOnly: true
     - name: authentik-secret
       mountPath: /authentik-secret
+      readOnly: true
+    - name: mailrelay
+      mounthPath: /mailrelay
       readOnly: true
