--- a/versions.yaml
+++ b/versions.yaml
@@ -32,6 +32,7 @@ helmcharts:
   scylla/scylla-operator: v1.12.2
   sealed-secrets/sealed-secrets: 2.15.4
   vmware-tanzu/velero: 6.6.0
+  wiremind/karma: 2.5.3
 images:
   corentinth/it-tools: 2024.5.13-a0bc346
   danielszabo99/microbin: 2.0.4
