--- a/versions.yaml
+++ b/versions.yaml
@@ -1,6 +1,7 @@
 helmcharts:
   aqua/trivy-operator: 0.18.4
   authentik/authentik: 2024.4.2
+  calibre-web/calibre-web: 19.0.13
   dex/dex: 0.18.0
   external-secrets/external-secrets: 0.9.19
   grafana/loki: 6.6.3
