fix(promtail): disable serviceMonitor
Seems like chart is broken somehow

--- a/configs/promtail.yaml
+++ b/configs/promtail.yaml
@@ -4,5 +4,9 @@ config:
   clients:
     - url: http://loki-gateway.loki/loki/api/v1/push
 
+service:
+  enabled: false
+  annotations: {}
+
 serviceMonitor:
-  enabled: true
+  enabled: false
