feat(promtail): re-enable serviceMonitor
promtail chart is broken. Adding a fake label to make validation ok

--- a/configs/promtail.yaml
+++ b/configs/promtail.yaml
@@ -6,7 +6,8 @@ config:
 
 service:
   enabled: false
-  annotations: {}
+  label:
+    dummy-label: due-to-broken-chart
 
 serviceMonitor:
-  enabled: false
+  enabled: true
