feat: adding new vhost for calibre-web

--- a/configs/calibre-web.yaml
+++ b/configs/calibre-web.yaml
@@ -18,9 +18,11 @@ ingress:
     ingressClassName: traefik
     hosts:
       - host: books.services.mkz.me
+      - host: lib.iop.cx
     tls:
       - hosts:
         - books.services.mkz.me
+        - lib.iop.cx
         secretName: tls-books-crt
 
     integrations:
