feat(loki): fixing monitoring configuration

--- a/configs/loki.yaml
+++ b/configs/loki.yaml
@@ -31,5 +31,10 @@ backend:
 write:
   replicas: 0
 
-serviceMonitor:
-  enabled: true
+monitoring:
+  dashboards:
+    enabled: true
+  serviceMonitor:
+    enabled: true
+    metricsInstance:
+      enabled: false
