--- a/configs/alloy.yaml
+++ b/configs/alloy.yaml
@@ -4,16 +4,22 @@ alloy:
   configMap:
     create: true
     content: |
+      // Generated from configs/alloy.yaml
+      logging {
+        level = "info"
+        format = "logfmt"
+      }
+
       discovery.kubernetes "pods" {
         role = "pod"
       }
 
       loki.source.kubernetes "pods" {
         targets    = discovery.kubernetes.pods.targets
-        forward_to = [loki.write.cluster.receiver]
+        forward_to = [loki.write.default.receiver]
       }
 
-      loki.write "cluster" {
+      loki.write "default" {
         endpoint {
           url = env("LOKI_URL")
         }
