--- a/configs/alloy.yaml
+++ b/configs/alloy.yaml
@@ -12,14 +12,29 @@ alloy:
 
       discovery.kubernetes "pods" {
         role = "pod"
+        namespaces = ["default", "emojivoto"]
       }
 
-      loki.source.kubernetes_events "events" {
-        forward_to = [loki.echo.echo.receiver]
+      discovery.relabel "pods" {
+        targets = discovery.kubernetes.pods.targets
+
+        rule {
+          action = "labelmap"
+          regex = "__meta_kubernetes_(namespace|(pod_(node_name|name|container_name|container_image)))"
+        }
       }
 
       loki.source.kubernetes "pods" {
-        targets    = discovery.kubernetes.pods.targets
+        targets    = discovery.relabel.pods.targets
+        forward_to = [loki.process.kubernetes_logs.receiver]
+      }
+
+      loki.process "kubernetes_logs" {
+        stage.drop {
+          older_than          = "30m"
+          drop_counter_reason = "too old"
+        }
+
         forward_to = [loki.write.default.receiver]
       }
 
@@ -29,8 +44,6 @@ alloy:
         }
         external_labels = {}
       }
-
-      loki.echo "echo" {}
 
   extraEnv:
     - name: LOKI_URL
