feat(loki): labels tweaks

--- a/configs/alloy.yaml
+++ b/configs/alloy.yaml
@@ -18,8 +18,43 @@ alloy:
         targets = discovery.kubernetes.pods.targets
 
         rule {
-          action = "labelmap"
-          regex = "__meta_kubernetes_(namespace|(pod_(node_name|name|container_name|container_image)))"
+          source_labels = ["__meta_kubernetes_namespace"]
+          action = "replace"
+          target_label = "namespace"
+        }
+
+        rule {
+          source_labels = ["__meta_kubernetes_pod_name"]
+          action = "replace"
+          target_label = "pod"
+          // ex: voting-558584fb85-9qrxt
+        }
+
+        rule {
+          source_labels = ["__meta_kubernetes_pod_ip"]
+          action = "replace"
+          target_label = "pod_ip"
+        }
+
+        rule {
+          source_labels = ["__meta_kubernetes_pod_node_name"]
+          action = "replace"
+          target_label = "node_name"
+          // ex: polygon-wave.mkz.me
+        }
+
+        rule {
+          source_labels = ["__meta_kubernetes_pod_container_name"]
+          action = "replace"
+          target_label = "container_name"
+          // ex: voting
+        }
+
+        rule {
+          source_labels = ["__meta_kubernetes_pod_container_image"]
+          action = "replace"
+          target_label = "container_image"
+          // ex: docker.l5d.io/buoyantio/emojivoto-voting-svc:v12
         }
       }
 
