fix(loki): disable scrapping gateway metrics

--- a/configs/loki.yaml
+++ b/configs/loki.yaml
@@ -38,3 +38,8 @@ monitoring:
     enabled: true
     metricsInstance:
       enabled: false
+
+gateway:
+  service:
+    labels:
+      prometheus.io/service-monitor: "false"
