feat(alloy): adding a job label

--- a/configs/alloy.yaml
+++ b/configs/alloy.yaml
@@ -56,6 +56,14 @@ alloy:
           target_label = "container_image"
           // ex: docker.l5d.io/buoyantio/emojivoto-voting-svc:v12
         }
+
+        rule {
+          source_labels = ["__meta_kubernetes_namespace", "__meta_kubernetes_pod_container_name"]
+          separator = "/"
+          action = "replace"
+          replacement = "$1"
+          target_label = "job"
+        }
       }
 
       loki.source.kubernetes "pods" {
