--- a/configs/homepage.yaml
+++ b/configs/homepage.yaml
@@ -18,7 +18,12 @@ config:
     providers:
       openweathermap: openweathermapapikey
       weatherapi: weatherapiapikey
-
+    quicklaunch:
+      searchDescriptions: true
+      hideInternetSearch: true
+      showSearchSuggestions: true
+      hideVisitURL: true
+      provider: google # google, duckduckgo, bing, baidu, brave or custom
     layout:
       - System:
           header: false
@@ -33,7 +38,6 @@ config:
           style: row
           columns: 5
 
-
   bookmarks:
     - Code:
       - Github:
@@ -47,6 +51,9 @@ config:
       - Mastodon:
         - abbr: MS
           href: https://mamot.fr/home
+      - Twitter:
+        - abbr: TW
+          href: https://x.com/home
 
     - News:
       - Lobsters:
@@ -179,7 +186,7 @@ ingress:
       cert-manager.io/cluster-issuer: "letsencrypt-prod"
       traefik.ingress.kubernetes.io/redirect-entry-point: "https"
       traefik.ingress.kubernetes.io/redirect-permanent: "true"
-      traefik.ingress.kubernetes.io/router.middlewares: "traefik-forward-auth-traefik-forward-auth@kubernetescrd"
+      traefik.ingress.kubernetes.io/router.middlewares: "authentik-ak-outpost-authentik-embedded-outpost@kubernetescrd"
     ingressClassName: traefik
     hosts:
       - host: home.iop.cx
